--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
       "properties": {
         "ai-notes.llmProvider": {
           "type": "string",
-          "enum": ["vscode-lm-api", "sap-ai-core"],
+          "enum": [
+            "vscode-lm-api",
+            "sap-ai-core"
+          ],
           "default": "vscode-lm-api",
           "description": "The LLM provider to use for AI Notes. 'vscode-lm-api' uses the VS Code Language Model API, while 'sap-ai-core' uses the SAP AI Core.",
           "enumDescriptions": [
@@ -45,6 +48,10 @@
       {
         "command": "ai-notes.saveNote",
         "title": "AI Notes: Save Note"
+      },
+      {
+        "command": "ai-notes.reclassifyNote",
+        "title": "AI Notes: Reclassify Note"
       }
     ]
   },
@@ -59,6 +66,7 @@
   "devDependencies": {
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/uuid": "^10.0.0",
     "@types/vscode": "^1.100.0",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
@@ -68,6 +76,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@sap-ai-sdk/foundation-models": "^1.13.0",
     "uuid": "^11.1.0"
   }
 }
