feat: Implement Notes by Tag feature with tree view and refresh command

--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
+    "views": {
+      "explorer": [
+        {
+          "id": "aiNotesByTag",
+          "name": "AI Notes by Tag"
+        }
+      ]
+    },
     "configuration": {
       "title": "AI Notes",
       "properties": {
@@ -52,8 +60,21 @@
       {
         "command": "ai-notes.reclassifyNote",
         "title": "AI Notes: Reclassify Note"
+      },
+      {
+        "command": "aiNotesByTag.refresh",
+        "title": "AI Notes: Refresh AI Notes by Tag"
       }
-    ]
+    ],
+    "menus": {
+      "view/title": [
+        {
+          "command": "aiNotesByTag.refresh",
+          "when": "view == aiNotesByTag",
+          "group": "navigation"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
