--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "ai-notes",
   "displayName": "ai-notes",
   "description": "",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "repository": "https://github.com/alexaytov/vscode-ai-notetaking",
   "engines": {
     "vscode": "^1.100.0"
   },
