feat: add export to PDF functionality for Markdown notes
- Added a new command to export Markdown notes to PDF.
- Integrated Puppeteer for PDF generation and marked for Markdown parsing.
- Implemented image embedding in Markdown for local images.
- Updated package.json to include dependencies for marked and puppeteer.
- Removed unused notesTree.ts file.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,14 @@
       {
         "command": "ai-notes.reclassifyNote",
         "title": "AI Notes: Reclassify Note"
+      },
+      {
+        "command": "ai-notes.exportToPdf",
+        "title": "AI Notes: Export Note to PDF",
+        "icon": {
+          "light": "resources/light/export.svg",
+          "dark": "resources/dark/export.svg"
+        }
       }
     ]
   },
@@ -83,6 +91,8 @@
   },
   "dependencies": {
     "@sap-ai-sdk/foundation-models": "^1.13.0",
+    "marked": "^15.0.12",
+    "puppeteer": "^24.9.0",
     "uuid": "^11.1.0"
   }
 }
